--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body onload="alert('olá mundo')"> <!--inline script-->
-    ola mundo    
+    olaa mundo    
 </body>
 <script>
     //script interno
