--- a/DOM/ex1.html
+++ b/DOM/ex1.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>DOM</title>
+    
 </head>
 <body>
-    
+    <h1 id="titulo">Dom :)</h1>
 </body>
-<script src="calculaservico.js"></script>
+<script src="ex1.js"></script>
 </html>
