--- a/DOM/ex2.html
+++ b/DOM/ex2.html
@@ -9,10 +9,19 @@
 <body>
     <form action="">
         <label for="servico">Serviço</label>
-        <input type="text" id="servico">
+        <select name ="" id="servico">
+            <option value="0"> Troca de óleo</option>
+            <option value="1"> Balanceamento</option>
+            <option value="2"> Cambagem</option>   
+        </select>
         <br><br>
         <label for="prazo"><p>Prazo</p></label>
-        <input type="text" id="prazo">
+        <select name ="" id="prazo">
+            <option value="0"> 1 dia</option>
+            <option value="1"> 2 dias</option>
+            <option value="2"> 3 dias</option>   
+        </select>
+        
         <p id="resultado"></p>
         <button type="submit" id="calcular">Calcular</button>
     </form>
