--- a/Storage/sessionStorage.html
+++ b/Storage/sessionStorage.html
@@ -7,14 +7,13 @@
     <title>Storage</title>
 </head>
 <body>
-    <span id ="mostrar">
     <form action="">
         <input type="text"  id="entrada">
         <button  id="botao">
             Executar
         </button>
     </form>
-    </span>
+    <span id ="mostrar"></span>
 </body>
-<script src ="sessionStorage.js"></script>
+<script src="sessionStorage.js"></script>
 </html>
