graficos,api,e juntar apis

--- a/graficos/exemplo.html
+++ b/graficos/exemplo.html
@@ -18,7 +18,7 @@
         <div class="row">
             
             <h2>VENDAS</h2>
-            <div id="graficoDeLinha" style="height: 250px; font-style:blueviolet;"></div>
+            <div id="graficoDeLsinha" style="height: 250px; font-style:blueviolet;"></div>
         </div>
         <div class="row">
             <br><br><br>
