--- a/graficos/ipca.html
+++ b/graficos/ipca.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col">
             <div id="ipca"></div>
-            <button class="buscar">Buscar IPCA</button>
+            <button class="buscar">Buscara IPCA</button>
         </div>
         
     </div>
