--- a/graficos/ipca.html
+++ b/graficos/ipca.html
@@ -15,6 +15,7 @@
     <div class="row">
         <div class="col">
             <div id="ipca"></div>
+            <input type="text" id="escolhaUsuario">
             <button class="buscar">Buscara IPCA</button>
         </div>
         
